# Revamp

./: README.md
.github/workflows/: ccpp.yml
linux/command line/: Makefile.am  README  a.out  arguments.cpp  arguments.h  colors.h  configure.ac  main.cpp  makefile  operations.cpp  operations.h
